<resources>
    <string name="app_name">HouseCoach</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="logo">Logo</string>
    <string name="user">Username</string>
    <string name="pass">Password</string>
    <string name="login">Login</string>
    <string name="reg">Register</string>
    <string name="register_here">Register Here</string>
    <string name="facebook_app_id">221623114699507</string>

    <string name="user_exists">User already logged in</string>
    <string name="sign_in_facebook">Log in with Facebook</string>
    <string name="sign_in_google">Log in with Google</string>
    <string name="logout_text">Log out</string>
</resources>
