<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".LoginActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="77dp"
        android:contentDescription="@string/logo"
        app:srcCompat="@drawable/logo_png" />

    <EditText
        android:id="@+id/etUser"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/imageView"
        android:layout_marginTop="100dp"
        android:background="#11000000"
        android:drawableLeft="@drawable/ic_action_user"
        android:drawableStart="@drawable/ic_action_user"
        android:ems="10"
        android:hint="@string/user"
        android:inputType="textPersonName"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="200dp"
        android:layout_height="20dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/etUser"
        android:layout_marginTop="20dp"
        android:background="#11000000"
        android:drawableLeft="@drawable/ic_action_pass"
        android:drawableStart="@drawable/ic_action_pass"
        android:ems="10"
        android:hint="@string/pass"
        android:inputType="textPassword"
        tools:ignore="NotSibling" />

    <android.support.v7.widget.CardView
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_above="@id/tvRegister"
        android:layout_marginBottom="40dp"
        android:layout_centerHorizontal="true"
        app:cardBackgroundColor="@color/colorAccent"
        app:cardCornerRadius="25dp"
        app:cardElevation="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/bLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="false"
                android:layout_centerHorizontal="true"
                android:background="@color/colorAccent"
                android:text="@string/login" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/tvRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:text="@string/register_here" />

</RelativeLayout>